fixed wrong redirect after login, when a custom redirect is defined fixed backend sidebar overflow when text is too long

--- a/scss/backend/framelix-backend.scss
+++ b/scss/backend/framelix-backend.scss
@@ -138,6 +138,7 @@ hr {
     text-align: left;
     border-radius: var(--border-radius);
     margin-bottom: 2px;
+    overflow: hidden;
 
     html[data-screen-size='s'] & {
       padding-top: 8px;
